--- a/model.ini
+++ b/model.ini
@@ -1,25 +1,3 @@
-[Perturbations]
-; Add/Subtract images from translated side cameras by the correction_factor
-correction_factor = 0.2
-; Flip images left/right that have a higher steering angle than the flip_threshold
-flip_threshold = 0.2
-; Straight line images are the most abbundant and hinder proper training
-; Therefore take only a fraction of them (e.g. 0.6 == 60%)
-line_image_probality = 0.3
-; Randomly perturb image brightness and/or noise given this probability
-perturbation_probability = 0.5
-; Noise perturbation level (+- pixel perturbation)
-noise_thresh = 30
-; Global image brighness perturbation (0.5 == up to 50% +- image brightness)
-brightness = 0.3
-
-[TrainValid]
-; Split data in to a train/valid ratio of 0.8/0.2
-split = 0.2
-batch_size = 28
-epochs = 3
-data_path = data
-
 [Model]
 ; Upper Image Cropping bound
 upper_cropping_bound = 65
@@ -28,16 +6,39 @@ lower_cropping_bound = 25
 ; Dropout
 dropout = 0.6
 
-[Runs]
+[Preprocess]
+; Add/Subtract images from translated side cameras by the correction_factor
+correction_factor = 0.3
+; Flip images left/right that have a higher steering angle than the flip_threshold
+flip_threshold = 0.2
+; Straight line images are the most abbundant and hinder proper training
+; Therefore take only a fraction of them (e.g. 0.6 == 60%)
+line_image_probality = 0.3
+; Randomly perturb image brightness and/or noise given this probability
+perturbation_probability = 0.3
+; Noise perturbation level (+- pixel perturbation)
+noise_thresh = 30
+; Global image brighness perturbation (0.5 == up to 50% +- image brightness)
+brightness = 0.3
+
+[Train]
+; Split data in to a train/valid ratio of 0.8/0.2
+split = 0.2
+; Modify the batch size to fit your GPU. This setup works on a 2GB device
+batch_size = 24
+epochs = 6
+data_path = data
+overlap_factor = 1.2
+max_queue_size = 2
+
+[Run]
 ; Keep in mind the default data_path (defined above) and this is where your runs
 ; shall live!
-
-; Define below your runs wich will be executed consecutively
+; Define below your runs wich will be executed consecutively (names are irrelevant)
 
 ; Here in the first run, only the dataset from the second track (mountain track,
 ; driven carefully for two laps, one for each lane) will be used to pre-train the model
-run1 = tr2_960x720
-
+pre_train_on_track2 = tr2_960x720
 ; The pretrained model will then be fine-tuned for both tracks by mixing the
 ; mountain track  and two runs on the dirt road, driven in opposite directions.
-; run2 = tr2_960x720 tr_960x720 tr_960x720_right
+train_on_pre_trained_track_2 = tr2_960x720 tr_960x720 tr_960x720_right
