--- a/model.ini
+++ b/model.ini
@@ -26,7 +26,7 @@ brightness = 0.3
 split = 0.2
 ; Modify the batch size to fit your GPU. This setup works on a 2GB device
 batch_size = 24
-epochs = 6
+epochs = 1
 data_path = data
 overlap_factor = 1.2
 max_queue_size = 2
@@ -41,4 +41,4 @@ max_queue_size = 2
 pre_train_on_track2 = tr2_960x720
 ; The pretrained model will then be fine-tuned for both tracks by mixing the
 ; mountain track  and two runs on the dirt road, driven in opposite directions.
-train_on_pre_trained_track_2 = tr2_960x720 tr_960x720 tr_960x720_right
+; train_on_pre_trained_track_2 = tr2_960x720 tr_960x720 tr_960x720_right
