--- a/model.ini
+++ b/model.ini
@@ -10,12 +10,12 @@ dropout = 0.6
 ; Add/Subtract images from translated side cameras by the correction_factor
 correction_factor = 0.3
 ; Flip images left/right that have a higher steering angle than the flip_threshold
-flip_threshold = 0.2
+flip_threshold = 0.3
 ; Straight line images are the most abbundant and hinder proper training
 ; Therefore take only a fraction of them (e.g. 0.6 == 60%)
 line_image_probality = 0.3
 ; Randomly perturb image brightness and/or noise given this probability
-perturbation_probability = 0.3
+perturbation_probability = 0.8
 ; Noise perturbation level (+- pixel perturbation)
 noise_thresh = 30
 ; Global image brighness perturbation (0.5 == up to 50% +- image brightness)
@@ -26,7 +26,7 @@ brightness = 0.3
 split = 0.2
 ; Modify the batch size to fit your GPU. This setup works on a 2GB device
 batch_size = 24
-epochs = 1
+epochs = 6
 data_path = data
 overlap_factor = 1.2
 max_queue_size = 2
@@ -41,4 +41,4 @@ max_queue_size = 2
 pre_train_on_track2 = tr2_960x720
 ; The pretrained model will then be fine-tuned for both tracks by mixing the
 ; mountain track  and two runs on the dirt road, driven in opposite directions.
-; train_on_pre_trained_track_2 = tr2_960x720 tr_960x720 tr_960x720_right
+train_on_pre_trained_track_2 = tr2_960x720 tr_960x720 tr_960x720_right
