--- a/model.ini
+++ b/model.ini
@@ -32,12 +32,12 @@ overlap_factor = 1.2
 max_queue_size = 2
 
 [Run]
-; Keep in mind the default data_path (defined above) and this is where your runs
-; shall live!
-; Define below your runs wich will be executed consecutively (names are irrelevant)
+; Keep in mind the default data_path (defined above) and this is where your training
+; sets shall live!
+; Define below your runs wich will be executed consecutively
 
-; Here in the first run, only the dataset from the second track (mountain track,
-; driven carefully for two laps, one for each lane) will be used to pre-train the model
+; Here in the first run, only the dataset from the second track (mountain track)
+; driven carefully for two laps, one for each lane, will be used to pre-train the model
 pre_train_on_track2 = tr2_960x720
 ; The pretrained model will then be fine-tuned for both tracks by mixing the
 ; mountain track  and two runs on the dirt road, driven in opposite directions.
